@@ -120,8 +120,8 @@ type = F
 usage = Threshold relative peak strength or number of beads for averaging
 tooltip = 
 manpage = Threshold relative peak strength or number of beads for averaging.
-With a non-zero entry, selected beads from the first round of filtering and
-correlation are averaged to produce a reference for a second round.  If a
+With a non-zero entry, selected beads from the first round of peak finding and
+integral measurement are averaged to produce a reference for a second round.  If a
 negative value is entered, the program will analyze the histogram of peak
 strengths and find the dip indicating the best boundary between actual and
 false beads.  The value has 4 different meanings depending on the range:
@@ -148,6 +148,20 @@ the number to store as a fraction of the number above the histogram dip (e.g.,
 -1.33 for all above plus 1/3 that many below the dip.)  If you use the
 default, or a number below -1, then you must examine the points in 3dmod,
 adjust the threshold if necessary, and delete points below the threshold.
+
+[Field = FallbackThresholds]
+short = fallback
+type = FP
+usage = Thresholds for averaging and storage if no histogram dip is found
+tooltip = 
+manpage = Thresholds to use as fallbacks when no histogram dip is found.  The
+first number is a threshold to use for averaging when no dip is detected in
+the histogram of peak strengths in the first round.  It can be between 0 and 1
+to specify a relative peak strength, or a number greater than 1 to specify a
+number of beads.  The second number is a threshold relative strength for peaks
+to store, between 0 and 1, when no dip is found in the histogram of
+second-round peak strengths.  If a fallback is desired for only one of these
+two rounds, enter a zero for the other value.
 
 [Field = MinSpacing]
 short = spacing
